appId: com.rhinopeaklabs.loksewa
---
- launchApp:
    clearState: true
- assertVisible: "Login"  # Wait for login screen
- tapOn:
    id: "email_input"
- inputText: "test@loksewa.ai"
- tapOn:
    id: "password_input"
- inputText: "password123"
- tapOn: "Login"
- assertVisible: "Dashboard" # Confirm login success
